stylebooki.css
@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;400;500&display=swap');

body
{
    font-family: "Raleway", Arial, Helvetica, sans-serif;
}

#main_body
{
    max-width: 1380px;
    margin-left: auto;
    margin-right: auto;
}

a
{
    text-decoration: none;
}

h1, h2
{
    font-size: 20px;
}

p, a 
{
    font-size: 15px;
    color: black;
}


h3
{
    font-size: 18px;
    font-weight: bold;
}

ul
{
    list-style-type: none;
}

/*style header */

header
{
    display: flex;
    justify-content: space-between;
    height: 100px;
    margin-bottom: 20px;
    margin-right: 30px;
    margin-left: 30px;
}

#logo
{
    
    max-width: 100%;
    display: flex;
    align-items: center;

}

#logo img
{
    max-width: 100%;
    height: auto;
    width: 90px;
    padding-top: 22px;
}

header nav
{
    width: 35%;
}

header ul
{
    display: flex;
    justify-content: space-around;
     align-items: center; 
}

.a_navigation
{
    
    color: #0065FC; 
}

.nav_actif
{
    border-top: 2px solid #0065FC ;
}

.nav_inactif:hover
{
    text-decoration: underline;
}

.nav_liens
{
    padding-top: 30px;
}

/*style recherche*/

#recherche
{
    display: flex;
    flex-direction: column;
    margin-right: 30px;
    margin-left: 30px;    
}

#recherche_intro
{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    
}

#recherche_intro h1
{
    padding-bottom: 0px;
    margin-bottom: 8px;
}

#recherche_intro p
{
    padding-top: 0px;
    margin-top: 0px;
    padding-bottom: 0px;
    margin-bottom: 0px;
}

/*style formulaire*/


.formulaire
{
    height: 50px;
    display: flex; 
    margin: 20px auto 20px 0px;  
}

.formulaire label
{
    background-color: #F2F2F2; 
    width: 50px;  
    display: flex; 
    justify-content: center;  
    align-items: center;   
    border-radius: 13px 0px 0px 13px; 
}

#champs
{
    
    display: flex;
    width: 260px;
    border-top: 1px solid #F2F2F2; 
    border-bottom: 1px solid #F2F2F2;
    height: 48px;
    margin: 0; 
}

.formulaire input[type="search"] 
{
    border: none;
    background: none; 
    padding-left: 20px;  
    margin: 0px;
    font-weight: bold;
    font-size: 17px; 
}

#bouton
{
    width: 120px; 
    font-weight: bold;
    font-size: 17px;
    border: none; 
    background-color: #0065FC;
    border-radius: 0px 13px 13px 0px; 
    color: white;   
}

.formulaire input:focus
{
    outline: none;
}

/*style barre de filtres*/


#filtre
{
    display: flex;
    align-items: center;
    height: 80px;
    font-weight: bold;
    font-size: 17px;   
}

#filtre h3
{
    margin-left: 8px;
}

#filtres_liste
{
    display: flex;
    align-items: center;
    width: 920px;
    height: 80px;
    justify-content: space-around;
    padding-left: 20px;
}

.lien_filtre
{
     display: flex; 
     justify-content: space-between; 
    align-items: center; 
    border: 2px solid #Dcdcdc;
    height: 46px;
    border-left: none;
    border-radius: 50px;
    padding-right: 15px;
}

.lien_filtre:hover
{
    border: 2px solid #0065FC;
    border-left: none;
    color: white;
    background-color: #0065FC;
}


.filtres_icones
{
    margin-right: 20px;
    padding: 15px;
    width: 20px;
    height: 20px;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 50px;
    background-color: #DEEBFF;
    
}
.lien_filtre:hover .filtres_icones
{
    background-color: #0065FC;
}

.fa-money-bill-wave, .fa-child, .fa-heart, .fa-dog, .fa-info
{
    color: #0065FC;
}

.lien_filtre:hover .fa-money-bill-wave,.lien_filtre:hover .fa-child,.lien_filtre:hover .fa-heart,.lien_filtre:hover .fa-dog
{
    color: white;
}


/*style infos*/

#infos
{
    display: flex;
    align-items: center;
    
}

.fa-info
{
    margin-left: 0px;
    margin-right: 15px;
    font-size: 13px;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 20px;
    height: 20px;
    padding: 3px;
    border: 1px solid #DEEBFF;
    border-radius: 50px;
}

/*styles Main*/

main
{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    margin-top: 25px;
    margin-right: 30px;
    margin-left: 30px;
    
}

#section_principale
{
    display: flex; 
    justify-content: space-between;
    width: 100%;
}

/* style article */

.partie
{
    background-color: #F2F2F2;
    border-radius: 20px;
    padding: 25px;
    display: flex;
    flex-direction: column;
}

.sous_titre
{
    font-size: 21px;
}

article
{
    width: 59%;
}

.hebergements
{
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap; 
}

.vignettes
{
    background-color: white;
     
    margin-bottom: 30px;
    border-radius: 20px;
    box-shadow: -3px 2px 6px #Dcdcdc;
}

article .vignettes
{
    width: 31%; 
    height: 200px;
}

.vignettes:hover
{
    box-shadow: -3px 2px 20px #Dcdcdc;
}

.vignettes_conteneur
{
    display: flex;
    flex-direction: column;
    height: 100%;
    width: 100%;
    border-radius: 20px;
}

.vignettes_image
{     
    overflow: hidden;     
}

article .vignettes_image
{
    height: 110px;
    margin: 5px 5px 0px 5px;
    border-radius: 20px 20px 0px 0px;
}

.vignettes img
{
    max-width: 300px;
    height: auto; 
}

.vignettes_infos
{
    display: flex;
    flex-direction: column;
    padding: 2px 5px 8px 17px;
}

article .vignettes_infos
{
    
    height: 85px; 
    border-radius: 0 0 20px 20px;
    
}

.vignettes h3
{
    font-size: 16px; 
    margin: 5px 3px 0 0; 
}

.vignettes p
{
    font-size: 14px;
    margin: 5px 3px 4px 0;  
}

.etoiles
{
    display: flex; 
    margin: auto 0 3px 0;  
}

.fa-star
{
    font-size: 12px;
    color: #0065FC;
}

.gris
{
    color: #Dcdcdc;
}

.affichage
{
    margin: 0;
    font-size: 19px; 
}

/*style aside*/

aside
{
    width: 28%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

#aside_titre
{
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%; 
}

.fa-chart-line
{
    font-size: 25px;
}

#populaires
{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

aside .vignettes
{
    width: 100%;
    height: 145px; 
}

aside .vignettes_conteneur
{
    
    display: flex;  
    flex-direction: row;
    justify-content: space-between; 
    width: 100%;
    height: 100%;
    border-radius: 20px;
}

aside .vignettes_image
{
    border-radius: 20px 0 0 20px; 
    width: 130px;  
    height: 135px;
    margin: 5px 0px 5px 5px;
    
}

aside .vignettes_infos
{
    width: 60%;  
    border-radius: 0 20px 20px 0;
    padding-top: 8px; 
}

#section_activites img
{
    max-width: 700px; 
    height: auto; 
}

#section_activites h3
{
    font-size: 16px;
}

#section_activites
{
    display: flex;
    flex-direction: column;
    width: 100%;
    margin-top: 30px;
}

#activites
{
    display: flex;
    justify-content: space-between;
}

.vignette_decoupage
{
    display: flex;
    flex-direction: column;
    width: 22.5%;
    height: 450px;
    border-radius: 20px;
}

.bas
{
    margin-top: auto; 
}

.vignettes_activites
{   
    border-radius: 20px;
    box-shadow: 0px 2px 6px #Dcdcdc;
}

.vignettes_activites:hover
{
    box-shadow: 0px 2px 20px #Dcdcdc;
}

.vignettes_activites a
{
    display: flex;
    flex-direction: column;
}

.activites_images
{
    width: 100%;
    overflow: hidden;
    border-radius: 20px 20px 0 0;
    margin-bottom: 0;
}

.grande .activites_images
{
    height: 390px;
}

.pomegues
{
    height: 190px;
}

.frioul
{
    height: 100px;
}

.garde, .longchamps
{
    height: 145px;
}

.activites_titres
{
    
    display: flex;
    align-items: center; 
    height: 60px;
    margin-bottom: 0;
    margin-top: 0;
    padding-left: 10px;
    padding-right: 10px;
    border-radius: 0 0 20px 20px;
}

/* style footer */

footer
{
    height: 200px;
    background-color: #F2F2F2;
    display: flex;
    margin-top: 60px;
    padding: 35px 0 25px 30px;
}

footer h2
{
    font-size: 16px;
}

.footer_section
{
    width: 30%;
    margin-right: 10%;
}

.footer_section ul
{
    padding-left: 0;
    padding-top: 10px;
    display: flex;
    flex-direction: column;   
}

.footer_section li
{
    margin-bottom: 18px;
}

.footer_section li:hover
{
    text-decoration: underline;
}

